chore: Melhorando a documentação
